Style edits and placeholders added

--- a/portfolio.html
+++ b/portfolio.html
@@ -7,16 +7,18 @@
     <title>Portfolio</title>
 </head>
 <body>
-    <nav class="navbar navbar-dark bg-dark">
-        <!-- Navbar content -->
-      </nav>
-      
-      <nav class="navbar navbar-dark bg-primary">
-        <!-- Navbar content -->
-      </nav>
-      
-      <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
-        <!-- Navbar content -->
+    <nav class="navbar navbar-expand-md navbar-dark" style="background-color: #2f4858;">
+        <a class="navbar-brand" href="#">Austin Ruhf</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="#">Portfolio</a>
+          </div>
+        </div>
       </nav>
 </body>
 </html>
