--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Arvo&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Arvo&display=swap" rel="stylesheet">
     <title>Austin Ruhf- Home</title>
 </head>
 <body style="background-image: linear-gradient(#1e2d2f, #041f1e); background-repeat: no-repeat;">
 
     <nav id="navbar-override" class="navbar navbar-expand-md navbar-dark" style="background-color: #041f1e">
-        <a class="navbar-brand" style="color:#f7dba7; font-size: xx-large;" href="#">Austin Ruhf</a>
+        <a class="navbar-brand" style="color:#F1AB86; font-size: xx-large;" href="#">Austin Ruhf</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav" >
-            <a class="nav-link active" style="color:#f7dba7" href="#">Home <span class="sr-only">(current)</span></a>
-            <a class="nav-link" href="#">Portfolio</a>
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link active" style="color:#F1AB86" href="index.html">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="portfolio.html">Portfolio</a>
+            <a class="nav-link" href="contact.html">Contact</a>
           </div>
         </div>
       </nav>
@@ -35,9 +35,11 @@
       </div>
       <br>
         <div class="row">
-          <div class="col-md-10 offset-md-1">
+          <div class="col-md-5 offset-md-1">
+            <img src="assets/home_page.jpg" alt="Austin">
+          </div>
+          <div class="col-md-6">
             <p> 
-              <img src="assets/headshot.png" alt="Austin" style="float:left; border-style: inset; border-width: 2px; border-color: #f7dba7; margin-right: 5%;">
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas ab quae sequi harum voluptas officiis explicabo assumenda esse, excepturi expedita soluta tempora labore dolores? Vel quisquam deleniti at quis iure. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nihil sint labore quos saepe eum at delectus omnis dolorum. Expedita odio, beatae repellendus tempora cumque illum esse itaque eos consequatur commodi. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex saepe esse quis recusandae error fugiat nulla tempora dolorum, earum dicta qui culpa necessitatibus odit libero deleniti molestiae illum soluta fugit? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos impedit nisi ipsam deleniti eveniet, nihil dicta dolor distinctio voluptas suscipit corrupti unde repudiandae a tenetur. Ratione adipisci quis aliquid distinctio! Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta quos temporibus unde nisi saepe ex minima maxime impedit totam dolorum. Esse vel possimus illum dolor sit ratione modi tempora sapiente? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis qui nihil veniam eligendi a exercitationem, numquam assumenda asperiores culpa possimus veritatis omnis sunt obcaecati recusandae voluptas sequi cum debitis. Similique! Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam exercitationem mollitia quisquam et sequi ullam laboriosam voluptates. Exercitationem odit, animi eius, ipsum, doloribus labore fugiat officia impedit quod ducimus repellendus.
             </p>
           </div>  
