--- a/portfolio.html
+++ b/portfolio.html
@@ -4,21 +4,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Arvo&display=swap" rel="stylesheet">
     <title>Portfolio</title>
 </head>
-<body>
-    <nav class="navbar navbar-expand-md navbar-dark" style="background-color: #2f4858;">
-        <a class="navbar-brand" href="#">Austin Ruhf</a>
+<body style="background-image: linear-gradient(#1e2d2f, #041f1e); background-repeat: no-repeat;">
+    <nav id="navbar-override" class="navbar navbar-expand-md navbar-dark" style="background-color: #041f1e">
+      <a class="navbar-brand" style="color:#F1AB86; font-size: xx-large;" href="#">Austin Ruhf</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-            <a class="nav-link" href="#">Contact</a>
-            <a class="nav-link" href="#">Portfolio</a>
+            <a class="nav-link" href="index.html">Home </a>
+            <a class="nav-link active" style="color:#F1AB86" href="portfolio.html">Portfolio<span class="sr-only">(current)</span> </a>
+            <a class="nav-link" href="contact.html">Contact</a>
           </div>
         </div>
       </nav>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="page-header">
+              <h1>Portfolio</h1>
+            </div>
+          </div>
+        </div>
+        <br>
+        <div class= "row">
+          <div class= "col-md-6">
+            <img src="assets/turtle.png" alt="Anti-Turtle Propaganda">
+          </div>
+          <div class= "col-md-6">
+            <p>A delightfully untrue page about which kind of girls to hang out with to avoid turtle attacks. </p>
+          </div>
+        </div>
+        <div class= "row">
+          <div class= "col-md-6">
+            <img src="assets/television.png" alt="Television">
+          </div>
+          <div class= "col-md-6">
+            <p>A soberingly true story of a band that made exactly one noteworthy album.</p>
+          </div>
+        </div>
+        <div class= "row">
+          <div class= "col-md-6">
+            <img src="assets/cat.png" alt="Warrior Cats Hunting Party">
+          </div>
+          <div class="col-md-6">
+            <p>The Dark Souls of Scratch-based browser games.</p>
+          </div>
+        </div>
 </body>
 </html>
