Removed Navbar Button, Expanded CSS and cleaned HTML

--- a/index.html
+++ b/index.html
@@ -9,41 +9,36 @@
     <link href="https://fonts.googleapis.com/css2?family=Arvo&display=swap" rel="stylesheet">
     <title>Austin Ruhf- Home</title>
 </head>
-<body style="background-image: linear-gradient(#1e2d2f, #041f1e); background-repeat: no-repeat;">
-
-    <nav id="navbar-override" class="navbar navbar-expand-md navbar-dark" style="background-color: #041f1e">
-        <a class="navbar-brand" style="color:#F1AB86; font-size: xx-large;" href="#">Austin Ruhf</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav" >
-            <a class="nav-link active" style="color:#F1AB86" href="index.html">Home <span class="sr-only">(current)</span></a>
-            <a class="nav-link" href="portfolio.html">Portfolio</a>
-            <a class="nav-link" href="contact.html">Contact</a>
-          </div>
-        </div>
-      </nav>
-      
+<body>
+<!--Nav section-->
+    <nav class="navbar navbar-expand-md navbar-dark">
+      <p class="navbar-brand">Austin Ruhf</p>
+      <div class="navbar-nav" >
+        <a class="nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="portfolio.html">Portfolio</a>
+        <a class="nav-link" href="contact.html">Contact</a>
+      </div>
+    </nav>
+<!--Page Contents-->
     <div class="container">
-      <div class="row">
+      <header class="row">
         <div class="col-md-12">
           <div class="page-header">
             <h1>About Me</h1>
           </div>
         </div>
-      </div>
+      </header>
       <br>
-        <div class="row">
-          <div class="col-md-5 offset-md-1">
-            <img src="assets/home_page.jpg" alt="Austin">
+        <section class="row">
+          <div class="col-md-4 offset-md-1">
+            <img src="assets/home_page.jpg" alt="Austin" style="height:600px">
           </div>
-          <div class="col-md-6">
+          <div class="col-md-7">
             <p> 
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas ab quae sequi harum voluptas officiis explicabo assumenda esse, excepturi expedita soluta tempora labore dolores? Vel quisquam deleniti at quis iure. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nihil sint labore quos saepe eum at delectus omnis dolorum. Expedita odio, beatae repellendus tempora cumque illum esse itaque eos consequatur commodi. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex saepe esse quis recusandae error fugiat nulla tempora dolorum, earum dicta qui culpa necessitatibus odit libero deleniti molestiae illum soluta fugit? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos impedit nisi ipsam deleniti eveniet, nihil dicta dolor distinctio voluptas suscipit corrupti unde repudiandae a tenetur. Ratione adipisci quis aliquid distinctio! Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta quos temporibus unde nisi saepe ex minima maxime impedit totam dolorum. Esse vel possimus illum dolor sit ratione modi tempora sapiente? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis qui nihil veniam eligendi a exercitationem, numquam assumenda asperiores culpa possimus veritatis omnis sunt obcaecati recusandae voluptas sequi cum debitis. Similique! Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam exercitationem mollitia quisquam et sequi ullam laboriosam voluptates. Exercitationem odit, animi eius, ipsum, doloribus labore fugiat officia impedit quod ducimus repellendus.
+              Virginia born and raised, I've been a lifeguard, landscaper, paddleboat merchant, prep cook, and hazardous waste technician. I've been in a dozen or so bands as a guitarist, bassist, drummer, and/or singer, including my current self-led 4-piece called Ulmeyda. Right now I'm building and decorating cakes at local Richmond bakery Shyndigz and I'm learning web development to launch a new career while stuck in quarantine. Visual arts are new to me but I love building big beautiful websites.
             </p>
           </div>  
-        </div>
+        </section>
       </div>
 </body>
 </html>
