--- a/portfolio.html
+++ b/portfolio.html
@@ -9,52 +9,49 @@
     <link href="https://fonts.googleapis.com/css2?family=Arvo&display=swap" rel="stylesheet">
     <title>Portfolio</title>
 </head>
-<body style="background-image: linear-gradient(#1e2d2f, #041f1e); background-repeat: no-repeat;">
-    <nav id="navbar-override" class="navbar navbar-expand-md navbar-dark" style="background-color: #041f1e">
-      <a class="navbar-brand" style="color:#F1AB86; font-size: xx-large;" href="#">Austin Ruhf</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-link" href="index.html">Home </a>
-            <a class="nav-link active" style="color:#F1AB86" href="portfolio.html">Portfolio<span class="sr-only">(current)</span> </a>
-            <a class="nav-link" href="contact.html">Contact</a>
-          </div>
+<body>
+<!--Nav Section-->
+  <nav class="navbar navbar-expand-md navbar-dark">
+    <p class="navbar-brand">Austin Ruhf</p>
+    <div class="navbar-nav">
+      <a class="nav-item nav-link" href="index.html">Home</a>
+      <a class="nav-item nav-link active" href="portfolio.html">Portfolio<span class="sr-only">(current)</span> </a>
+      <a class="nav-link" href="contact.html">Contact</a>
+    </div>
+  </nav>
+<!--Page Content-->
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="page-header">
+          <h1>Portfolio</h1>
         </div>
-      </nav>
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="page-header">
-              <h1>Portfolio</h1>
-            </div>
-          </div>
-        </div>
-        <br>
-        <div class= "row">
-          <div class= "col-md-6">
-            <img src="assets/turtle.png" alt="Anti-Turtle Propaganda">
-          </div>
-          <div class= "col-md-6">
-            <p>A delightfully untrue page about which kind of girls to hang out with to avoid turtle attacks. </p>
-          </div>
-        </div>
-        <div class= "row">
-          <div class= "col-md-6">
-            <img src="assets/television.png" alt="Television">
-          </div>
-          <div class= "col-md-6">
-            <p>A soberingly true story of a band that made exactly one noteworthy album.</p>
-          </div>
-        </div>
-        <div class= "row">
-          <div class= "col-md-6">
-            <img src="assets/cat.png" alt="Warrior Cats Hunting Party">
-          </div>
-          <div class="col-md-6">
-            <p>The Dark Souls of Scratch-based browser games.</p>
-          </div>
-        </div>
+      </div>
+    </div>
+    <br>
+    <div class= "row">
+      <div class= "col-md-6">
+        <img src="assets/turtle.png" alt="Anti-Turtle Propaganda">
+      </div>
+      <div class= "col-md-6">
+        <p>A delightfully untrue page about which kind of girls to hang out with to avoid turtle attacks. </p>
+      </div>
+    </div>
+    <div class= "row">
+      <div class= "col-md-6">
+        <img src="assets/television.png" alt="Television">
+      </div>
+      <div class= "col-md-6">
+        <p>A soberingly true story of a band that made exactly one noteworthy album.</p>
+      </div>
+    </div>
+    <div class= "row">
+      <div class= "col-md-6">
+        <img src="assets/cat.png" alt="Warrior Cats Hunting Party">
+      </div>
+      <div class="col-md-6">
+        <p>The Dark Souls of Scratch-based browser games.</p>
+      </div>
+    </div>
 </body>
 </html>
