--- a/contact.html
+++ b/contact.html
@@ -9,52 +9,46 @@
     <link href="https://fonts.googleapis.com/css2?family=Arvo&display=swap" rel="stylesheet">
     <title>Contact</title>
 </head>
-<body style="background-image: linear-gradient(#1e2d2f, #041f1e); background-repeat: no-repeat;">
-  <nav id="navbar-override" class="navbar navbar-expand-md navbar-dark" style="background-color: #041f1e">
-    <a class="navbar-brand" style="color:#F1AB86; font-size: xx-large;" href="#">Austin Ruhf</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-link" href="index.html">Home </a>
-            <a class="nav-link" href="portfolio.html">Portfolio</a>
-            <a class="nav-link active" style="color:#F1AB86" href="contact.html"><span class="sr-only">(current)</span>Contact</a>
-          </div>
-        </div>
-      </nav>
-      <div class= container-md>
-        <div class="row">
-          <div class="col-md-12">
-            <div class="page-header">
-              <h1>Contact</h1>
-            </div>
-          </div>
-        </div>
-        <br>
-        <div class= "row">
-          <div class= "col-md-6 offset-md-1">
-            <form>
-              <div class="form-group">
-                <label for="exampleFormControlTextarea1">Name</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="1"></textarea>
-              </div>
-              <div class="form-group">
-                <label for="exampleInputEmail1">Email address</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                <small id="emailHelp" class="form-text text-muted">We'll never check this email address.</small>
-              </div>
-              <div class="form-group">
-                <label for="exampleFormControlTextarea1">Explain Yourself</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-              </div>
-              <button type="submit" style="background-color: #C57B57; border-color:#F1AB86;" class="btn btn-primary">Submit</button>
-            </form>
-          </div>
-          <div class="col-md-3">
-            <img src="assets/headshot.png" alt="Austin">
-          </div>
+<body>
+  <nav class="navbar navbar-expand-md navbar-dark">
+    <p class="navbar-brand">Austin Ruhf</p>
+      <div class="navbar-nav">
+        <a class="nav-link" href="index.html">Home </a>
+        <a class="nav-link" href="portfolio.html">Portfolio</a>
+        <a class="nav-link active" href="contact.html"><span class="sr-only">(current)</span>Contact</a>
+      </div>
+  </nav>
+  <div class= container>
+    <div class="row">
+      <div class="col-md-12">
+        <div class="page-header">
+         <h1>Contact</h1>
         </div>
       </div>
+    </div>
+    <div class= "row">
+      <div class= "col-md-6 offset-md-1">
+        <form>
+          <div class="form-group">
+            <label for="exampleFormControlTextarea1">Name</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="1"></textarea>
+          </div>
+          <div class="form-group">
+            <label for="exampleInputEmail1">Email address</label>
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+            <small id="emailHelp" class="form-text text-muted">I'll never check this email address.</small>
+          </div>
+          <div class="form-group">
+            <label for="exampleFormControlTextarea1">Explain Yourself</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+          </div>
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+      </div>
+      <div class="col-md-3 offset-md-1">
+        <img src="assets/headshot.png" alt="Austin">
+      </div>
+    </div>
+  </div>  
 </body>
 </html>
