Added HTML markup and revised README

--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
     <title>Contact</title>
 </head>
 <body>
+  <!--Nav Section-->
   <nav class="navbar navbar-expand-md navbar-dark">
     <p class="navbar-brand">Austin Ruhf</p>
       <div class="navbar-nav">
@@ -18,6 +19,7 @@
         <a class="nav-link active" href="contact.html"><span class="sr-only">(current)</span>Contact</a>
       </div>
   </nav>
+  <!--Page Contents-->
   <div class= container>
     <div class="row">
       <div class="col-md-12">
@@ -26,7 +28,9 @@
         </div>
       </div>
     </div>
+  <br>
     <div class= "row">
+      <!---Contact Form-->
       <div class= "col-md-6 offset-md-1">
         <form>
           <div class="form-group">
@@ -45,6 +49,7 @@
           <button type="submit" class="btn btn-primary">Submit</button>
         </form>
       </div>
+      <!---Author Photo-->
       <div class="col-md-3 offset-md-1">
         <img src="assets/headshot.png" alt="Austin">
       </div>
