--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Austin Ruhf- Home</title>
 </head>
 <body>
-<!--Nav section-->
+<!--Nav Section-->
     <nav class="navbar navbar-expand-md navbar-dark">
       <p class="navbar-brand">Austin Ruhf</p>
       <div class="navbar-nav" >
