--- a/portfolio.html
+++ b/portfolio.html
@@ -22,6 +22,7 @@
 <!--Page Content-->
   <div class="container">
     <div class="row">
+      <!---Header-->
       <div class="col-md-12">
         <div class="page-header">
           <h1>Portfolio</h1>
@@ -30,6 +31,7 @@
     </div>
     <br>
     <div class= "row">
+      <!--Example Project #1-->
       <div class= "col-md-6">
         <img src="assets/turtle.png" alt="Anti-Turtle Propaganda">
       </div>
@@ -38,6 +40,7 @@
       </div>
     </div>
     <div class= "row">
+      <!---Example Project #2-->
       <div class= "col-md-6">
         <img src="assets/television.png" alt="Television">
       </div>
@@ -46,6 +49,7 @@
       </div>
     </div>
     <div class= "row">
+      <!---Example Project #3-->
       <div class= "col-md-6">
         <img src="assets/cat.png" alt="Warrior Cats Hunting Party">
       </div>
