--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
     </nav>
 <!--Page Contents-->
     <div class="container">
+      <!---Header-->
       <header class="row">
-        <div class="col-md-12">
+        <div class="col">
           <div class="page-header">
             <h1>About Me</h1>
           </div>
@@ -30,10 +31,12 @@
       </header>
       <br>
         <section class="row">
-          <div class="col-md-4 offset-md-1">
-            <img src="assets/home_page.jpg" alt="Austin" style="height:600px">
+          <!---Author Image --->
+          <div class="col-sm-12 col-lg-6">
+            <img src="assets/home_page.jpg" class="img-fluid" alt="Austin">
           </div>
-          <div class="col-md-7">
+          <!---Author Bio-->
+          <div class="col-sm-12 col-lg-6">
             <p> 
               Virginia born and raised, I've been a lifeguard, landscaper, paddleboat merchant, prep cook, and hazardous waste technician. I've been in a dozen or so bands as a guitarist, bassist, drummer, and/or singer, including my current self-led 4-piece called Ulmeyda. Right now I'm building and decorating cakes at local Richmond bakery Shyndigz and I'm learning web development to launch a new career while stuck in quarantine. Visual arts are new to me but I love building big beautiful websites.
             </p>
