--- a/portfolio.html
+++ b/portfolio.html
@@ -21,40 +21,76 @@
   </nav>
 <!--Page Content-->
   <div class="container">
-    <div class="row">
-      <!---Header-->
+    <div class= "row">
+      <!--Example Project #1-->
       <div class="col-md-12">
         <div class="page-header">
-          <h1>Portfolio</h1>
+          <h2>Birthday Bot</h2>
         </div>
+      </div>
+      
+      <div class= "col-md-6">
+        <br>
+        <img src="assets/birthdayShot.png" alt="Birthday Bot">
+      </div>
+      <div class= "col-md-6">
+        <br>
+        <p>My first group project harnessing the power of APIs to give you a personalized list of celebrity birthdays.
+          <br>
+          Deployed Page: 
+          <a href="https://wtrickser.github.io/birthdayBot/">https://wtrickser.github.io/birthdayBot/</a> 
+          <br>
+          Github:
+          <a href="https://github.com/Wtrickser/birthdayBot">https://github.com/Wtrickser/birthdayBot</a>
+        </p>
       </div>
     </div>
     <br>
     <div class= "row">
-      <!--Example Project #1-->
-      <div class= "col-md-6">
-        <img src="assets/turtle.png" alt="Anti-Turtle Propaganda">
-      </div>
-      <div class= "col-md-6">
-        <p>A delightfully untrue page about which kind of girls to hang out with to avoid turtle attacks. </p>
-      </div>
-    </div>
-    <div class= "row">
       <!---Example Project #2-->
-      <div class= "col-md-6">
-        <img src="assets/television.png" alt="Television">
+      <div class="col-md-12">
+        <div class="page-header">
+          <h2>Work Day Scheduler</h2>
+        </div>
       </div>
       <div class= "col-md-6">
-        <p>A soberingly true story of a band that made exactly one noteworthy album.</p>
+        <br>
+        <img src="assets/Work_Day_Scheduler.gif" alt="Work Day Scheduler">
+      </div>
+      <div class= "col-md-6">
+        <br>
+        <p>For this assignment I made a workday hourly task list with a dynamically generated display with the ability to save list items in local storage.
+          <br>
+          Deployed Page: 
+          <a href="https://acruhf.github.io/Work-Day-Planner/">https://acruhf.github.io/Work-Day-Planner/</a> 
+          <br>
+          Github:
+          <a href="https://github.com/acruhf/Work-Day-Planner">https://github.com/acruhf/Work-Day-Planner</a>
+        </p>
       </div>
     </div>
+    <br>
     <div class= "row">
       <!---Example Project #3-->
+      <div class="col-md-12">
+        <div class="page-header">
+          <h2>Timed Quiz</h2>
+        </div>
+      </div>
       <div class= "col-md-6">
-        <img src="assets/cat.png" alt="Warrior Cats Hunting Party">
+        <br>
+        <img src="assets/EGQ.gif" alt="Timed-Quiz">
       </div>
       <div class="col-md-6">
-        <p>The Dark Souls of Scratch-based browser games.</p>
+        <br>
+        <p>A timed multiple-choice quiz on the topic of Electric Guitars. This assignment was a test of applying various javascript concepts together including a timer, scoring system, and a leaderboard for saving scores into local storage
+          <br>
+          Deployed Page: 
+          <a href="https://acruhf.github.io/Timed-Quiz/">https://acruhf.github.io/Timed-Quiz/</a> 
+          <br>
+          Github:
+          <a href="https://github.com/acruhf/Timed-Quiz">https://github.com/acruhf/Timed-Quiz</a>
+        </p>
       </div>
     </div>
 </body>
