added contact page icons

--- a/contact.html
+++ b/contact.html
@@ -30,8 +30,17 @@
     </div>
   <br>
     <div class= "row">
+      <div class= "col-lg-4 text-center">
+        <img src="assets/Lin.png" alt="Linkedin">
+          <p>Linkedin</p>
+      </div>
+      <div class= "col-lg-4 text-center">
+        <img src="assets/ghub.png" alt="Github">
+          <p>Github</p>
+      </div>
+
       <!---Contact Form-->
-      <div class= "col-md-6 offset-md-1">
+      <!-- <div class= "col-md-6 offset-md-1">
         <form>
           <div class="form-group">
             <label for="exampleFormControlTextarea1">Name</label>
@@ -48,11 +57,11 @@
           </div>
           <button type="submit" class="btn btn-primary">Submit</button>
         </form>
-      </div>
+      </div> -->
       <!---Author Photo-->
-      <div class="col-md-3 offset-md-1">
+      <!-- <div class="col-md-3 offset-md-1">
         <img src="assets/headshot.png" alt="Austin">
-      </div>
+      </div> -->
     </div>
   </div>  
 </body>
