--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <section class="row">
           <!---Author Image --->
           <div class="col-sm-12 col-lg-6">
-            <img src="assets/home_page.jpg" class="img-fluid" alt="Austin">
+            <img src="assets/home_page.jpg" class="img-fluid self" alt="Austin">
           </div>
           <!---Author Bio-->
           <div class="col-sm-12 col-lg-6">
