finished contact page, fixed styling

--- a/contact.html
+++ b/contact.html
@@ -31,37 +31,24 @@
   <br>
     <div class= "row">
       <div class= "col-lg-4 text-center">
-        <img src="assets/Lin.png" alt="Linkedin">
+        <a href="https://www.linkedin.com/in/austin-ruhf-7265711b8/"><img src="assets/Lin.png" alt="Linkedin">
           <p>Linkedin</p>
+        </a>
       </div>
       <div class= "col-lg-4 text-center">
-        <img src="assets/ghub.png" alt="Github">
+        <a href="https://github.com/acruhf"><img src="assets/ghub.png" alt="Github">
           <p>Github</p>
+        </a>
       </div>
-
-      <!---Contact Form-->
-      <!-- <div class= "col-md-6 offset-md-1">
-        <form>
-          <div class="form-group">
-            <label for="exampleFormControlTextarea1">Name</label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="1"></textarea>
-          </div>
-          <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-            <small id="emailHelp" class="form-text text-muted">I'll never check this email address.</small>
-          </div>
-          <div class="form-group">
-            <label for="exampleFormControlTextarea1">Explain Yourself</label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-          </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
-      </div> -->
-      <!---Author Photo-->
-      <!-- <div class="col-md-3 offset-md-1">
-        <img src="assets/headshot.png" alt="Austin">
-      </div> -->
+      <div class= "col-lg-4 text-center">
+        <p>
+          Email: Austin.Ruhf@gmail.com
+          <br><br><br>
+          Phone: (434) 509-8337
+          <br><br><br>
+          <a href="assets/AustinRuhfResume_2021.pdf" download="newfilename">Resume</a>
+        </p>
+      </div>
     </div>
   </div>  
 </body>
