--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
       
       <div class= "col-md-6">
         <br>
-        <img src="assets/birthdayShot.png" alt="Birthday Bot">
+        <img src="assets/birthdayShot.png" alt="Birthday Bot" class="portfolio">
       </div>
       <div class= "col-md-6">
         <br>
@@ -55,7 +55,7 @@
       </div>
       <div class= "col-md-6">
         <br>
-        <img src="assets/Work_Day_Scheduler.gif" alt="Work Day Scheduler">
+        <img src="assets/Work_Day_Scheduler.gif" alt="Work Day Scheduler" class="portfolio">
       </div>
       <div class= "col-md-6">
         <br>
@@ -79,7 +79,7 @@
       </div>
       <div class= "col-md-6">
         <br>
-        <img src="assets/EGQ.gif" alt="Timed-Quiz">
+        <img src="assets/EGQ.gif" alt="Timed-Quiz" class="portfolio">
       </div>
       <div class="col-md-6">
         <br>
