fixed linkedin link

--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
   <br>
     <div class= "row">
       <div class= "col-lg-4 text-center">
-        <a href="https://www.linkedin.com/in/austin-ruhf-7265711b8/"><img src="assets/Lin.png" alt="Linkedin">
+        <a href="https://www.linkedin.com/in/austin-ruhf/"><img src="assets/Lin.png" alt="Linkedin">
           <p>Linkedin</p>
         </a>
       </div>
