--- a/portfolio.html
+++ b/portfolio.html
@@ -25,10 +25,33 @@
       <!--Example Project #1-->
       <div class="col-md-12">
         <div class="page-header">
+          <h2>Walkies</h2>
+        </div>
+      </div>
+      <div class= "col-md-6">
+        <br>
+        <img src="assets/walkiesshot.png" alt="Walkies" class="portfolio">
+      </div>
+      <div class= "col-md-6">
+        <br>
+        <p>My second group project harnessing the power of MySQL and Sequelize to give you a local dog-walking app.
+          <br>
+          Deployed Page: 
+          <a href="https://sheltered-eyrie-89748.herokuapp.com/">https://sheltered-eyrie-89748.herokuapp.com/</a> 
+          <br>
+          Github:
+          <a href="https://github.com/awiehrs/walkies-test">https://github.com/awiehrs/walkies-test</a>
+        </p>
+      </div>
+    </div>
+    <br>
+    <div class= "row">
+      <!--Example Project #2-->
+      <div class="col-md-12">
+        <div class="page-header">
           <h2>Birthday Bot</h2>
         </div>
       </div>
-      
       <div class= "col-md-6">
         <br>
         <img src="assets/birthdayShot.png" alt="Birthday Bot" class="portfolio">
@@ -47,7 +70,31 @@
     </div>
     <br>
     <div class= "row">
-      <!---Example Project #2-->
+      <!--Example Project #3-->
+      <div class="col-md-12">
+        <div class="page-header">
+          <h2>Eat-Da-Burger</h2>
+        </div>
+      </div>
+      <div class= "col-md-6">
+        <br>
+        <img src="assets/eatdaburger.png" alt="Eat-Da-Burger" class="portfolio">
+      </div>
+      <div class= "col-md-6">
+        <br>
+        <p>A Burger-Eating app made using Node, Express, and MySQL 
+          <br>
+          Deployed Page: 
+          <a href="https://acruhf-burger-logger.herokuapp.com/">https://acruhf-burger-logger.herokuapp.com/</a> 
+          <br>
+          Github:
+          <a href="https://github.com/acruhf/burger-logger">https://github.com/acruhf/burger-logger</a>
+        </p>
+      </div>
+    </div>
+    <br>
+    <div class= "row">
+      <!---Example Project #4-->
       <div class="col-md-12">
         <div class="page-header">
           <h2>Work Day Scheduler</h2>
@@ -71,7 +118,7 @@
     </div>
     <br>
     <div class= "row">
-      <!---Example Project #3-->
+      <!---Example Project #4-->
       <div class="col-md-12">
         <div class="page-header">
           <h2>Timed Quiz</h2>
