updated home page

--- a/index.html
+++ b/index.html
@@ -38,9 +38,7 @@
           <!---Author Bio-->
           <div class="col-sm-12 col-lg-6">
             <p> 
-              Virginia born and raised, I've been a lifeguard, landscaper, paddleboat merchant, prep cook, and hazardous waste technician. I've been in a dozen or so bands as a guitarist, bassist, drummer, and/or singer, including my current self-led 4-piece called Ulmeyda. Right now I'm building and decorating cakes at local Richmond bakery Shyndigz and I'm learning web development to launch a new career while stuck in quarantine. Visual arts are new to me but I love building big beautiful websites.
-            </p>
-          </div>  
+              Virginia born and raised, I've been a lifeguard, landscaper, paddleboat merchant, prep cook, and hazardous waste technician. I'm a lifelong musician who plays a little of everything. Right now I'm building and decorating cakes at local Richmond bakery Shyndigz and I'm learning web development to launch a new career. 
         </section>
       </div>
 </body>
